<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="#123456"
              android:orientation="vertical"
              android:weightSum="1"
              >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#DB3446"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:layout_gravity="top"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/ZERO"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="top"
    android:layout_weight="0.6"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/tutorial"
            android:id="@+id/tutorial"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:id="@+id/Tutorial"
            android:textColor="#fff"
            android:textAlignment="center"/>
        <ImageView

            android:background="@drawable/namespaces"
            android:id="@+id/namespaces"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/namespaces"
            android:id="@+id/Namespaces"
            android:layout_marginRight="5dp"
            android:textColor="#fff"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/functions"
            android:id="@+id/functions"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/bonus"
            android:id="@+id/Functions"
            android:textColor="#fff"
            android:textAlignment="center"/>
        <ImageView
            android:src="@drawable/settings"
            android:id="@+id/settings"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:visibility="invisible"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/Settings"
            android:enabled="false"
            android:visibility="invisible"
            android:textColor="#fff"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/key_words"
            android:id="@+id/key_words"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/Key_words"
            android:id="@+id/Key_words"
            android:textColor="#fff"
            android:textAlignment="center"/>
        <ImageView
            android:src="@drawable/about_me"
            android:id="@+id/about"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:id="@+id/About"
            android:textColor="#fff"
            android:textAlignment="center"/>

    </LinearLayout>


</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:textStyle="bold|italic"
        android:text="@string/app_name"
        android:layout_weight="0.1"
        android:textColor="#28B463"
        />

</LinearLayout>
